--- a/index.html.html
+++ b/index.html.html
@@ -10,7 +10,7 @@
   <!-- Header -->
   <header class="bg-white shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold text-green-600">Sửa Xe Hòa</h1>
+      <h1 class="text-xl font-bold text-green-600">Sửa Xe Hoa</h1>
       <nav class="space-x-6">
         <a href="#" class="hover:text-green-500">Trang chủ</a>
         <a href="#products" class="hover:text-green-500">Sản phẩm</a>
