--- a/index.html.html
+++ b/index.html.html
@@ -33,7 +33,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- Card 1 -->
       <div class="bg-white rounded-xl shadow-md p-4">
-        <img src="https://via.placeholder.com/300x200" alt="Xe đạp điện 1" class="rounded-lg mb-4">
+        <img src="xedapdien.png" alt="Xe đạp điện 1" class="rounded-lg mb-4">
         <h4 class="text-xl font-semibold">Xe đạp điện Hòa Phát</h4>
         <p class="text-green-600 font-bold">12.500.000đ</p>
       </div>
